--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-google-site-verification: googleb3a3f89d0cf59c96.html
+<meta name="google-site-verification" content="zLXodPrwQTxqkBbTn4WsdBu3Mbqth7Nhv8pMWlOLCQk" />
